namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-frontend-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-cla-frontend-uat
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    cloud-platform.justice.gov.uk/namespace: "laa-cla-frontend-uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/application: "Civil Legal Advice Case Handling System"
    cloud-platform.justice.gov.uk/owner: "LAA Get Access: laa-get-access@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cla_frontend"
    cloud-platform.justice.gov.uk/slack-channel: "cla-alerts"
