namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-frontend-uat/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-cla-frontend-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-cla-frontend-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-source-namespace
  namespace: laa-cla-frontend-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-cla-backend-uat
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
 name: allow-prometheus-scraping
 namespace: laa-cla-frontend-uat
spec:
 podSelector:
   matchLabels:
     app.kubernetes.io/name: cla-metrics
 policyTypes:
 - Ingress
 ingress:
 - from:
   - namespaceSelector:
       matchLabels:
         component: monitoring
